// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationCard matches the last snapshot for a comment 1`] = `
<View>
  <View>
    <Avatar
      avatarUrl="https://wombat.com/test.jpg"
    />
  </View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={2}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        New comment on
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={2}
      >
         A post to end all other posts, having an extremely long post title that just seems to go on and on and on and on
      </Text>
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={2}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Wombat 
      </Text>
      wrote: a fairly long comment that in theory should get truncated by the line limit, and end in elipsis
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      1 mo ago
    </Text>
  </View>
</View>
`;

exports[`NotificationCard matches the last snapshot for a comment mention 1`] = `
<View>
  <View>
    <Avatar
      avatarUrl="https://wombat.com/test.jpg"
    />
  </View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={2}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Wombat Aardvark 
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        mentioned you in a comment on
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={2}
      >
         A post to end all other posts, having an extremely long post title that just seems to go on and on and on and on
      </Text>
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={2}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Wombat 
      </Text>
      wrote: a fairly long comment that in theory should get truncated by the line limit, and end in elipsis
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      1 mo ago
    </Text>
  </View>
</View>
`;

exports[`NotificationCard matches the last snapshot for a join approved 1`] = `
<View>
  <View>
    <Avatar
      avatarUrl="https://wombat.com/test.jpg"
    />
  </View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={2}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Join Request Approved
      </Text>
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={2}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Wombat 
      </Text>
      approved your request to join
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        $
         community
      </Text>
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      1 mo ago
    </Text>
  </View>
</View>
`;

exports[`NotificationCard matches the last snapshot for a join request 1`] = `
<View>
  <View>
    <Avatar
      avatarUrl="https://wombat.com/test.jpg"
    />
  </View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={2}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Wombat Aardvark 
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        New join request
      </Text>
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={2}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Wombat 
      </Text>
      requested to join
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        $
         community
      </Text>
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      1 mo ago
    </Text>
  </View>
</View>
`;

exports[`NotificationCard matches the last snapshot for a mention 1`] = `
<View>
  <View>
    <Avatar
      avatarUrl="https://wombat.com/test.jpg"
    />
  </View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={2}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Wombat Aardvark 
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        mentioned you
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={2}
      >
         A post to end all other posts, having an extremely long post title that just seems to go on and on and on and on
      </Text>
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={2}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Wombat 
      </Text>
      wrote: a post that mentions Forgle McWorfle
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      1 mo ago
    </Text>
  </View>
</View>
`;

exports[`NotificationCard matches the last snapshot for a post in topic 1`] = `
<View>
  <View>
    <Avatar
      avatarUrl="https://wombat.com/test.jpg"
    />
  </View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={2}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        New post in
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
         hydroponics
      </Text>
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      numberOfLines={2}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
      >
        Wombat 
      </Text>
      wrote: a fairly long comment that in theory should get truncated by the line limit, and end in elipsis
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      1 mo ago
    </Text>
  </View>
</View>
`;
